<resources>
    <string name="app_name">Android Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_best">The Best</string>
    <string name="on_shop">On Shopping</string>
    <string name="easier">The easiest way to find the best product with your</string>
    <string name="fav">favorite brand or nearest location</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="confirm">Confirm</string>
    <string name="read_more">read more</string>
    <string name="read_less">read less</string>
    <string name="welcome_to_our_app">Welcome To Our App</string>
    <string name="let_s_create_an_account">Let\'s create an account</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
</resources>