<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.RegisterFragment">

    <TextView
        android:id="@+id/fragment_register_welcome_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome_to_our_app"
        android:textColor="@color/black_app"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toTopOf="@id/fragment_register_lets_create_txt"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fragment_register_lets_create_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/let_s_create_an_account"
        android:textColor="@color/black_app"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toTopOf="@id/fragment_register_register_cardView"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/fragment_register_register_cardView"
        style="@style/CustomCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fragment_register_register_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/black_app"
                android:textSize="@dimen/_17ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_register_inputTextLayoutName"
                style="@style/setup_ed_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_register_register_txt">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_register_inputTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="text"
                    android:paddingTop="@dimen/_10ssp"
                    android:textSize="@dimen/_11ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_register_inputTextLayoutEmail"
                style="@style/setup_ed_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:hint="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_register_inputTextLayoutName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_register_inputTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:paddingTop="@dimen/_10ssp"
                    android:textSize="@dimen/_11ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_register_inputTextLayoutMobilePhone"
                style="@style/setup_ed_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:hint="@string/mobile_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_register_inputTextLayoutEmail"
                app:prefixText="+20"
                app:prefixTextColor="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_register_inputTextMobilePhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:paddingTop="@dimen/_10ssp"
                    android:textSize="@dimen/_11ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_register_inputTextLayoutPassword"
                style="@style/setup_ed_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:hint="@string/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_register_inputTextLayoutMobilePhone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_register_inputTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingTop="@dimen/_10ssp"
                    android:textSize="@dimen/_11ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_register_register_btn"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/register"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_register_inputTextLayoutPassword" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_register_register_btn">

                <TextView
                    android:id="@+id/fragment_register_haveAccount_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/do_you_have_an_account"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/fragment_register_log_in_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/log_in"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:id="@+id/spin_kit"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="@dimen/_10sdp"
        >
        <com.github.ybq.android.spinkit.SpinKitView
            style="@style/SpinKitView.FadingCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_20sdp"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/brown_b" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>